--- a/folio_library.html
+++ b/folio_library.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Folio Library - Malate Literary Folio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="mlf_logo.ico">
+    <link rel="stylesheet" href="static/style.css">
+    <link rel="icon" type="image/x-icon" href="static/mlf_logo.ico">
 </head>
 
 <body>
@@ -38,19 +38,19 @@
             <div class="folio-gallery">
                 <figure>
                     <a href="https://drive.google.com/file/d/1soCCRCaVdQoKXWam2VYRvi7nQQRyLW8R/view" target="_blank">
-                        <img src="folio_covers/30_b1.jpg" alt="Tomo XXX Bilang 1">
+                        <img src="static/folio_covers/30_b1.jpg" alt="Tomo XXX Bilang 1">
                     </a>
                     <figcaption>Bilang 1</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/17ieT9zC-YqQJuJcVohzsUFRr3jynGD4P/view" target="_blank">
-                        <img src="folio_covers/30_b2.jpg" alt="Tomo XXX Bilang 2">
+                        <img src="static/folio_covers/30_b2.jpg" alt="Tomo XXX Bilang 2">
                     </a>
                     <figcaption>Bilang 2</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/173Em7EKanJ2ES1omzTvXxR-b0DyJEwhy/view" target="_blank">
-                        <img src="folio_covers/30_b3.jpg" alt="Tomo XXX Bilang 3">
+                        <img src="static/folio_covers/30_b3.jpg" alt="Tomo XXX Bilang 3">
                     </a>
                     <figcaption>Bilang 3</figcaption>
                 </figure>
@@ -62,13 +62,13 @@
             <div class="folio-gallery">
                 <figure>
                     <a href="https://drive.google.com/file/d/1sum3kQWszR7hRvvaNjWvsA2slwIaPij0/view" target="_blank">
-                        <img src="folio_covers/31_b1.jpg" alt="Tomo XXXI Bilang 1">
+                        <img src="static/folio_covers/31_b1.jpg" alt="Tomo XXXI Bilang 1">
                     </a>
                     <figcaption>Bilang 1</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1outEYUjSGu9eUcp6jXiLcUBiO0sbfz0j/view" target="_blank">
-                        <img src="folio_covers/31_b2.jpg" alt="Tomo XXXI Bilang 2">
+                        <img src="static/folio_covers/31_b2.jpg" alt="Tomo XXXI Bilang 2">
                     </a>
                     <figcaption>Bilang 2</figcaption>
                 </figure>
@@ -80,7 +80,7 @@
             <div class="folio-gallery">
                 <figure>
                     <a href="https://drive.google.com/file/d/1uRjI0sP62agDMjTwyArYzSOYyT3uM8dX/view" target="_blank">
-                        <img src="folio_covers/32_b1.jpg" alt="Tomo XXXII Bilang 1">
+                        <img src="static/folio_covers/32_b1.jpg" alt="Tomo XXXII Bilang 1">
                     </a>
                     <figcaption>Bilang 1</figcaption>
                 </figure>
@@ -92,13 +92,13 @@
             <div class="folio-gallery">
                 <figure>
                     <a href="https://drive.google.com/file/d/18u_RzLAYYz84OtVbgQYrwNALnDHq8r1v/view" target="_blank">
-                        <img src="folio_covers/33_b1.jpg" alt="Tomo XXXIII Bilang 1">
+                        <img src="static/folio_covers/33_b1.jpg" alt="Tomo XXXIII Bilang 1">
                     </a>
                     <figcaption>Bilang 1</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1cxXMp1kiwrTKbOgVrEg6VmtMUyAJ8Td0/view" target="_blank">
-                        <img src="folio_covers/33_b2.jpg" alt="Tomo XXXIII Bilang 2">
+                        <img src="static/folio_covers/33_b2.jpg" alt="Tomo XXXIII Bilang 2">
                     </a>
                     <figcaption>Bilang 2</figcaption>
                 </figure>
@@ -110,13 +110,13 @@
             <div class="folio-gallery">
                 <figure>
                     <a href="https://drive.google.com/file/d/1WvkrPpSgtm3Lbvau58jFOlZ3eP53e9cF/view" target="_blank">
-                        <img src="folio_covers/34_b1.jpg" alt="Tomo XXXIV Bilang 1">
+                        <img src="static/folio_covers/34_b1.jpg" alt="Tomo XXXIV Bilang 1">
                     </a>
                     <figcaption>Bilang 1</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1rYtt7go6KcmeeLEa4e6xaetJrJcFV7u8/view" target="_blank">
-                        <img src="folio_covers/34_b2.jpg" alt="Tomo XXXIV Bilang 2">
+                        <img src="static/folio_covers/34_b2.jpg" alt="Tomo XXXIV Bilang 2">
                     </a>
                     <figcaption>Bilang 2</figcaption>
                 </figure>
@@ -128,19 +128,19 @@
             <div class="folio-gallery">
                 <figure>
                     <a href="https://drive.google.com/file/d/1d9E1Uo3GBdu6EBwLmEanMWBwAyEc1uCe/view" target="_blank">
-                        <img src="folio_covers/35_b1.jpg" alt="Tomo XXXV Bilang 1">
+                        <img src="static/folio_covers/35_b1.jpg" alt="Tomo XXXV Bilang 1">
                     </a>
                     <figcaption>Bilang 1</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1uhI9rHEeCymxwr5LLdSbqWgO8DcC02SS/view" target="_blank">
-                        <img src="folio_covers/35_b2.jpg" alt="Tomo XXXV Bilang 2">
+                        <img src="static/folio_covers/35_b2.jpg" alt="Tomo XXXV Bilang 2">
                     </a>
                     <figcaption>Bilang 2</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1uKNqRQvka4ThE6Lw8GvXQ5QiVmMenw1P/view" target="_blank">
-                        <img src="folio_covers/35_b3.jpg" alt="Tomo XXXV Bilang 3">
+                        <img src="static/folio_covers/35_b3.jpg" alt="Tomo XXXV Bilang 3">
                     </a>
                     <figcaption>Bilang 3</figcaption>
                 </figure>
@@ -152,31 +152,31 @@
             <div class="folio-gallery">
                 <figure>
                     <a href="https://drive.google.com/file/d/1W1QXYs0mBhoY1lMVHVYN5IF2mabk89Bl/view" target="_blank">
-                        <img src="folio_covers/36_b1.jpg" alt="Tomo XXXVI Bilang 1">
+                        <img src="static/folio_covers/36_b1.jpg" alt="Tomo XXXVI Bilang 1">
                     </a>
                     <figcaption>Bilang 1</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1hl23AkWx4waOxnyq5fZcz73QG69JQ6gD/view" target="_blank">
-                        <img src="folio_covers/36_b2.jpg" alt="Tomo XXXVI Bilang 2">
+                        <img src="static/folio_covers/36_b2.jpg" alt="Tomo XXXVI Bilang 2">
                     </a>
                     <figcaption>Bilang 2</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1gfqFKnMpyb8tUDJ2enIrSPlXYExNJLIM/view" target="_blank">
-                        <img src="folio_covers/36_b3.jpg" alt="Tomo XXXVI Bilang 3">
+                        <img src="static/folio_covers/36_b3.jpg" alt="Tomo XXXVI Bilang 3">
                     </a>
                     <figcaption>Bilang 3</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/10PjLzjGNQpspNa_MoixYANXjN_SDwuZR/view" target="_blank">
-                        <img src="folio_covers/36_sf1.jpg" alt="Tomo XXXVI Special Issue Bilang 1: Lockdown Folio">
+                        <img src="static/folio_covers/36_sf1.jpg" alt="Tomo XXXVI Special Issue Bilang 1: Lockdown Folio">
                     </a>
                     <figcaption>Special Issue Bilang 1: Lockdown Folio</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1B3Hso7YcJ9YlXHtumeryQzio_KzO8JUa/view" target="_blank">
-                        <img src="folio_covers/36_sf2.jpg" alt="Tomo XXXVI Special Issue Bilang 2: Pride Folio">
+                        <img src="static/folio_covers/36_sf2.jpg" alt="Tomo XXXVI Special Issue Bilang 2: Pride Folio">
                     </a>
                     <figcaption>Special Issue Bilang 2: Pride Folio</figcaption>
                 </figure>
@@ -188,25 +188,25 @@
             <div class="folio-gallery">
                 <figure>
                     <a href="https://drive.google.com/file/d/151t3d3a-_CCf_g-eQcctAiky0_PBXmUi/view" target="_blank">
-                        <img src="folio_covers/37_b1.jpg" alt="Tomo XXXVII Bilang 1">
+                        <img src="static/folio_covers/37_b1.jpg" alt="Tomo XXXVII Bilang 1">
                     </a>
                     <figcaption>Bilang 1</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1PcRBEuQvNTbaZYieFs0nZxG6shgX-cnk/view" target="_blank">
-                        <img src="folio_covers/37_b2.jpg" alt="Tomo XXXVII Bilang 2">
+                        <img src="static/folio_covers/37_b2.jpg" alt="Tomo XXXVII Bilang 2">
                     </a>
                     <figcaption>Bilang 2</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1YqC1T1fMzZzd3zd4LgVhiFfMvVuRDPWk/view" target="_blank">
-                        <img src="folio_covers/37_b3.jpg" alt="Tomo XXXVII Bilang 3">
+                        <img src="static/folio_covers/37_b3.jpg" alt="Tomo XXXVII Bilang 3">
                     </a>
                     <figcaption>Bilang 3</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1zhhnoC2xZydqi-iqkquz07qaDN-lsz3p/view" target="_blank">
-                        <img src="folio_covers/37_sf1.jpg" alt="Tomo XXXVI Special Issue Bilang 1: Political Folio">
+                        <img src="static/folio_covers/37_sf1.jpg" alt="Tomo XXXVI Special Issue Bilang 1: Political Folio">
                     </a>
                     <figcaption>Special Issue Bilang 1: Political Folio</figcaption>
                 </figure>
@@ -218,25 +218,25 @@
             <div class="folio-gallery">
                 <figure>
                     <a href="https://drive.google.com/file/d/1Z-69k5FOTrAZutDT51BU-lyTrPp23HDp/view" target="_blank">
-                        <img src="folio_covers/38_b1.jpg" alt="Tomo XXXVIII Bilang 1">
+                        <img src="static/folio_covers/38_b1.jpg" alt="Tomo XXXVIII Bilang 1">
                     </a>
                     <figcaption>Bilang 1</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1aeMdzNFTg5wSrUWfvmXxbt5Yq2lQmXiM/view" target="_blank">
-                        <img src="folio_covers/38_b2.jpg" alt="Tomo XXXVIII Bilang 2">
+                        <img src="static/folio_covers/38_b2.jpg" alt="Tomo XXXVIII Bilang 2">
                     </a>
                     <figcaption>Bilang 2</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1KupTXNBR63t9yIjhWM9QhnDivJpNivq6/view" target="_blank">
-                        <img src="folio_covers/38_b3.jpg" alt="Tomo XXXVIII Bilang 3">
+                        <img src="static/folio_covers/38_b3.jpg" alt="Tomo XXXVIII Bilang 3">
                     </a>
                     <figcaption>Bilang 3</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1PzcRSHjnuX3npYKNOjabi_35_wMcP-Gk/view" target="_blank">
-                        <img src="folio_covers/38_sf1.jpg" alt="Tomo XXXVI Special Issue Bilang 1: Audiobook Folio">
+                        <img src="static/folio_covers/38_sf1.jpg" alt="Tomo XXXVI Special Issue Bilang 1: Audiobook Folio">
                     </a>
                     <figcaption>Special Issue Bilang 1: Audiobook Folio</figcaption>
                 </figure>
@@ -248,25 +248,25 @@
             <div class="folio-gallery">
                 <figure>
                     <a href="https://drive.google.com/file/d/1Mprl9Sx04I8aI9_FoM8QhaDmfmLN0rCA/view" target="_blank">
-                        <img src="folio_covers/39_b1.jpg" alt="Tomo XXXIX Bilang 1">
+                        <img src="static/folio_covers/39_b1.jpg" alt="Tomo XXXIX Bilang 1">
                     </a>
                     <figcaption>Bilang 1</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1FbUGN-NwH-_L8_jmFK3ZMbK4rJpTxVLl/view" target="_blank">
-                        <img src="folio_covers/39_b2.jpg" alt="Tomo XXXIX Bilang 2">
+                        <img src="static/folio_covers/39_b2.jpg" alt="Tomo XXXIX Bilang 2">
                     </a>
                     <figcaption>Bilang 2</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1e65CqsfM-as0O0MraRNooRWHviiMjbjU/view" target="_blank">
-                        <img src="folio_covers/39_sf1.jpg" alt="Tomo XXXIX Special Issue Bilang 1: Women's Folio">
+                        <img src="static/folio_covers/39_sf1.jpg" alt="Tomo XXXIX Special Issue Bilang 1: Women's Folio">
                     </a>
                     <figcaption>Special Issue Bilang 1: Women's Folio</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1xLudD7zBgkLJ1TtkDUNMgSEQ8YpzTHrO/view" target="_blank">
-                        <img src="folio_covers/39_sf2.jpg" alt="Tomo XXXIX Special Issue Bilang 2: Sports Folio">
+                        <img src="static/folio_covers/39_sf2.jpg" alt="Tomo XXXIX Special Issue Bilang 2: Sports Folio">
                     </a>
                     <figcaption>Special Issue Bilang 2: Sports Folio</figcaption>
                 </figure>
@@ -278,19 +278,19 @@
             <div class="folio-gallery">
                 <figure>
                     <a href="https://drive.google.com/file/d/19aYgdGpDC_QYHkupqyycbWFilU7h-K5W/view" target="_blank">
-                        <img src="folio_covers/40_b1.jpg" alt="Tomo XL Bilang 1">
+                        <img src="static/folio_covers/40_b1.jpg" alt="Tomo XL Bilang 1">
                     </a>
                     <figcaption>Bilang 1</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1HSeN1QNaj2jzWkmk9aVVGzWPRn7KGbYb/view" target="_blank">
-                        <img src="folio_covers/40_b2.jpg" alt="Tomo XL Bilang 2">
+                        <img src="static/folio_covers/40_b2.jpg" alt="Tomo XL Bilang 2">
                     </a>
                     <figcaption>Bilang 2</figcaption>
                 </figure>
                 <figure>
                     <a href="https://drive.google.com/file/d/1_y5OmYJksTy6RwsNs1rm6mATiXt0PE3O/view" target="_blank">
-                        <img src="folio_covers/40_antho.jpg" alt="40th Anthology">
+                        <img src="static/folio_covers/40_antho.jpg" alt="40th Anthology">
                     </a>
                     <figcaption>40th Anthology</figcaption>
                 </figure>
