--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Malate Literary Folio | About Us</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="mlf_logo.ico">
+    <link rel="stylesheet" href="static/style.css">
+    <link rel="icon" type="image/x-icon" href="static/mlf_logo.ico">
 </head>
 <body>
     <!-- Header -->
@@ -29,37 +29,37 @@
             <section class="segments">
 
             <div class="segment">
-                <img src="greenlantern.jpg" class="section-icon">
+                <img src="static/greenlantern.jpg" class="section-icon">
                 <h3>Art</h3>
                 <p>The Art section</p>
             </div>
 
             <div class="segment">
-                <img src="greenlantern.jpg" class="section-icon">
+                <img src="static/greenlantern.jpg" class="section-icon">
                 <h3>Photo</h3>
                 <p>The Photo section</p>
             </div>
 
             <div class="segment">
-                <img src="greenlantern.jpg" class="section-icon">
+                <img src="static/greenlantern.jpg" class="section-icon">
                 <h3>Poetry</h3>
                 <p>The Poetry section</p>
             </div>
 
             <div class="segment">
-                <img src="greenlantern.jpg" class="section-icon">
+                <img src="static/greenlantern.jpg" class="section-icon">
                 <h3>Prose</h3>
                 <p>The Prose section</p>
             </div>
 
             <div class="segment">
-                <img src="greenlantern.jpg" class="section-icon">
+                <img src="static/greenlantern.jpg" class="section-icon">
                 <h3>Screen/Play</h3>
                 <p>The Screen/Play section</p>
             </div>
 
             <div class="segment">
-                <img src="greenlantern.jpg" class="section-icon">
+                <img src="static/greenlantern.jpg" class="section-icon">
                 <h3>Marketing and Events</h3>
                 <p>The Marketing and Events section</p>
             </div>
