Front-end minor change

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Contact Us - Malate Literary Folio</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="icon" type="image/x-icon" href="static/mlf_logo.ico">
@@ -22,9 +22,11 @@
     </header>
 
     <main>
-        <div class="contact-container">
+        <section class="folio-intro">
             <h1>Contact Us</h1>
+        </section>
 
+        <div class="contact-container">
             <div class="contact-sections">
             <!-- General Inquiries -->
             <div class="contact-section">
