--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Malate Literary Folio | About Us</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="icon" type="image/x-icon" href="static/mlf_logo.ico">
@@ -20,12 +20,16 @@
         </nav>
     </header>
 
-        <main class="about-container">
-            <section class="about-text">
+        <main>
+            <section class="folio-intro">
                 <h1>About Us</h1>
-                <p>Founded in 1984, <strong>Malate Literary Folio</strong> is the official literary and arts publication of De La Salle University. </p>
+                <p>
+                    Founded in 1984, <strong>Malate Literary Folio</strong> is the official literary and arts publication of De La Salle University. 
+                </p>
             </section>
+        </main>
 
+        <main class="about-container">
             <section class="segments">
 
             <div class="segment">
