--- a/folio_library.html
+++ b/folio_library.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Folio Library - Malate Literary Folio</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="icon" type="image/x-icon" href="static/mlf_logo.ico">
