--- a/folio_library.html
+++ b/folio_library.html
@@ -8,18 +8,22 @@
     <title>Folio Library - Malate Literary Folio</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="icon" type="image/x-icon" href="static/mlf_logo.ico">
+    
 </head>
 
 <body>
     <header class="header">
         <a href="index.html" class="logo">Malate Literary Folio</a>
-
         <nav class="navbar">
-            <a href="index.html">About Us</a>
+            <a href="index.html" class="active">About Us</a>
             <a href="contact.html">Contact Us</a>
-            <a href="folio_library.html" class="active">Folio Library</a>
-            <!-- <a href="featured_works.html">Featured Works</a> -->
+            <a href="folio_library.html">Folio Library</a>
         </nav>
+        <div class="menu-toggle" id="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
 
 
@@ -320,5 +324,14 @@
             </div>
         </footer>
     </main>
+
+    <script>
+        const menuToggle = document.getElementById("menu-toggle");
+        const navbar = document.querySelector(".navbar");
+
+        menuToggle.addEventListener("click", () => {
+        navbar.classList.toggle("active");
+        });
+    </script>
 </body>
 </html>
