--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
     <link rel="icon" type="image/x-icon" href="static/mlf_logo.ico">
 </head>
 <body>
-    <!-- Header -->
     <header class="header">
         <a href="index.html" class="logo">Malate Literary Folio</a>
         <nav class="navbar">
             <a href="index.html" class="active">About Us</a>
             <a href="contact.html">Contact Us</a>
             <a href="folio_library.html">Folio Library</a>
-            <!-- <a href="featured_works.html">Featured Works</a> -->
         </nav>
+        <div class="menu-toggle" id="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
 
         <main>
@@ -196,5 +199,14 @@
             <a href="#top" class="to-top">To the top ↑</a>
         </div>
     </footer>
+
+    <script>
+        const menuToggle = document.getElementById("menu-toggle");
+        const navbar = document.querySelector(".navbar");
+
+        menuToggle.addEventListener("click", () => {
+        navbar.classList.toggle("active");
+        });
+    </script>
 </body>
 </html>
